--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/parser": "^7.23.4",
-    "@babel/traverse": "^7.23.4"
+    "@babel/traverse": "^7.23.4",
+    "ejs": "^3.1.9"
   }
 }
