--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@babel/parser": "^7.23.4",
     "@babel/traverse": "^7.23.4",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "ejs": "^3.1.9"
   }
 }
